<resources>
    <string name="app_name">TEdit</string>
    <string name="version">v2.4.3</string>
    <string name="empty_dir">No Contents</string>
    <string name="save_filename">Untitled.txt</string>
    <string name="alert">Alert</string>
    <string name="error">Error</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="okay">Okay</string>
    <string name="whole_word">Whole Word</string>
    <string name="match_case">Match Case</string>
    <string name="search">Search</string>
    <string name="replace">Replace</string>
    <string name="internal">Internal</string>
    <string name="root">Root</string>
    <string name="missing_dir">Directory does not exist!</string>
    <string name="missing_file">File does not exist!</string>
    <string name="error_delete">Unable to delete file!</string>
    <string name="error_writefile">Unable to save file!</string>
    <string name="error_nowritepermission">Permission Denied!\n\nPlease enable storage permission by opening your Android Settings app and selecting Apps&#8212;>TEdit&#8212;>Permissions.</string>
    <string name="error_selectdirectory">Please select a directory to save your file under.</string>
    <string name="error_permission_denied">Permission Denied</string>
    <string name="error_readfile">TEdit was not able to open the file.</string>
    <string name="error_invalidname">Invalid filename!</string>
    <string name="error_direxists">Directory already exists.</string>
    <string name="error_oom">Unfortunately your device ran out of memory whilst attempting to perform this operation.</string>
    <string name="alert_binaryfile">TEdit might not be able to read this file, are you sure you\'d like to open it?</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="delete_msg">Are you sure you\'d like to delete</string>
    <string name="overwrite">Overwrite</string>
    <string name="overwrite_message">Do you wish to overwrite %s?</string>
    <string name="readonlymode">READ-ONLY MODE</string>
    <string name="error_dbclosed">The database could not be opened.</string>
    <string name="error_dberror">Unable to access information in the database.</string>
    <string name="error_unmounted">External storage media is not mounted.</string>
    <string name="error_protectedpath">The desired folder is protected, TEdit will not be able to write to this file.</string>
    <string name="error_nofilepath">The specified path does not exist.</string>
    <string name="error_json">An error occurred attempting to parse the file path.</string>
    <string name="error_nonewdir">TEdit was not able to create the new directory. You may not have permission to modify the contents of the current directory.</string>
    <string name="error_newtextbody">The contents of the document could not be retrieved.</string>
    <string name="error_nofilename">The filename could not be retrieved.</string>
    <string name="error_androidfilerename">Unable to save file. The Android distribution renamed the file to an unknown existing filename.</string>
    <string name="error_nourirelease">TEdit was unable to release the permission</string>
    <string name="error_filenotsaved">The file was not saved for an unknown reason.</string>
    <string name="alert_androidrenamedfile">Android decided it knew better than you what the filename should be and renamed it to:</string>
    <string name="newdirectory">New Directory</string>
    <string name="newdirmessage">Directory name:</string>
    <string name="dircreated">Directory Created</string>
    <string name="filesaved">File Saved</string>
    <string name="filedeleted">File Deleted</string>
    <string name="confirmclose">Confirm Close</string>
    <string name="confirmclose_message">This file has not been saved, are you sure you\'d like to close it?</string>
    <string name="noopendocuments">No Open Documents</string>
    <string name="items_replaced">Item(s) Replaced</string>
    <string name="help">Help</string>
    <string name="browser">Browser</string>
    <string name="editor">Editor</string>
    <string name="tabs">Tabs</string>
    <string name="launch_sdpicker_title">Select SDCard</string>
    <string name="launch_sdpicker">If you wish to browse your SDCard you must grant TEdit permission to do so by selecting the root folder of your SDCard in the following file manager.\n\nNote this feature is not available on all phone models.</string>
    <string name="volumePicker">Choose Volume</string>
    <string name="whatsnew">What\'s New</string>
    <string name="author">Developed by Adam T. Ryder</string>
    <string name="icon_author">Icon Design by David Mind</string>
    <string name="help_newdoc">Create a new document.</string>
    <string name="help_parentdir">Move to the parent directory.</string>
    <string name="help_newdir">Create a new directory if not in the Permitted Directories root browser view. When in the file browser\'s root view, Permitted Directories, selecting this button will launch Android\'s Files application where you can browse to and select a directory to grant TEdit permission to access.</string>
    <string name="help_drives">Select a volume to browse. Root, internal or, if present, SDcard.</string>
    <string name="help_tabs">View the list of currently open documents.</string>
    <string name="help_browseclose">Select the behavior of the Back button/gesture from the global settings menu. When Parent Directory is selected activating the Back button/gesture will move to the parent directory until the Permitted Directories view is displayed at which point activating the Back button/gesture twice will display one of the currently open text files or, if there are no open files, close TEdit. When Close Browser is selected activating the Back button/gesture will immediately close TEdit if there are no currently open text files, otherwise one of the open files will be displayed.</string>
    <string name="help_opendoc">Open a document.</string>
    <string name="help_savedoc">Save the current document. (ctrl+s)</string>
    <string name="help_saveas">Save a copy of the current document. (ctrl+shift+s)</string>
    <string name="help_searchtext">Search and replace text within the text document.</string>
    <string name="help_textlayer2">Switch to the second button layer.</string>
    <string name="help_textlayer1">Switch to the first button layer.</string>
    <string name="help_editorclose">Use your device\'s back button to close the current document. If more than one document is open this will switch to one of the other open documents otherwise, this will switch to the file browser.</string>
    <string name="help_tabswipe">Swipe any item left or right to close the respective text file.</string>
    <string name="help_tabclose">Use your device\'s back button to close the tabs view. If more than one document is open this will switch to the last open document otherwise, this will switch to the file browser.</string>
    <string name="help_replace">Replace the currently selected instance of the search phrase with the replace phrase.</string>
    <string name="help_replaceall">Replace all instances of the search phrase with the replace phrase.</string>
    <string name="help_left">Select and scroll to the previous instance of the search phrase within the text document.</string>
    <string name="help_right">Select and scroll to the next instance of the search phrase within the text document.</string>
    <string name="help_back">Use your device\'s back button to exit search mode.</string>
    <string name="help_opensettings">A settings menu can be accessed by swiping to the right anywhere on the screen.</string>
    <string name="label_global">Global:</string>
    <string name="help_settings_global">Global settings will be applied, by default, to the entire application.</string>
    <string name="label_system">System:</string>
    <string name="help_settings_global_system">These settings apply to system menus, dialog windows, tab and directory browser views.</string>
    <string name="label_startupdir">Startup Directory:</string>
    <string name="help_settings_global_startupdir">The directory you wish TEdit to display upon start.</string>
    <string name="label_typeface">Typeface:</string>
    <string name="help_settings_typeface">A stylized text appearance.</string>
    <string name="label_textdirection">Text Direction:</string>
    <string name="help_settings_textdirection">The directionality of text for your language.</string>
    <string name="help_settings_aob">Select how TEdit reacts when the Android Back button/gesture is activated when viewing the file browser. Selecting Parent Directory will cause TEdit to move to the parent directory when the Back action is initiated. When viewing the Permitted Directories activating the Back action twice will close TEdit or move to one of the open text files if there are any. Selecting Close Browser will cause TEdit to immediately close or move to one of the open text files when the back action is activated.</string>
    <string name="help_settings_enableroot">Allow browsing the device\'s root directory from the Permitted Directories view. This may not work on all devices and you will not be able to save files under the root volume unless your device is rooted.</string>
    <string name="label_editor">Editor:</string>
    <string name="help_settings_editor">These settings will be applied, by default, to all text editor views. The settings here can be overridden for individual text documents via the Local settings menu available by swiping to the right from a text editor view.</string>
    <string name="help_settings_wordwrap">Whether or not text in the editor should scroll horizontally.</string>
    <string name="label_local">Local:</string>
    <string name="help_settings_local">Local settings are applied only to the individual text document from which the Local settings menu was accessed. These settings will apply to that particular text document until it is closed. Select &quot;Use Global&quot; for any of the settings to revert that setting to the setting specified in the global options menu.</string>
    <string name="help_permitdirectory">Welcome to the TEdit Permitted Directories display. This is the root display of the TEdit File Browser and will enable you to manage which directories on your device TEdit has access to. Initially this display will only show the Permit New Directory option. To display additional directories you must first grant TEdit permission to access those directories and you can accomplish this by selecting either the New Directory button on TEdit\'s taskbar or selecting the Permit New Directory option.\n\nTapping the New Directory button or selecting the Permit New Directory option will launch Android\'s Files application. Within this application locate and enter the directory you wish to grant TEdit access to then select the Allow or Select button, the text and position of this button may vary by Android implementation. Once you\'ve granted TEdit access to one or more directories they will show in the Permitted Directories display where you can select and browse their contents.\n\nIt is not necessary to grant TEdit permission to access a directory if you\'ve already granted TEdit permission to a parent of that directory.</string>
    <string name="dontshowagain">Don\'t Show Again</string>
    <string name="settings_global">GLOBAL</string>
    <string name="settings_local">LOCAL</string>
    <string name="settings_system">System Settings</string>
    <string name="settings_editor">Editor Settings</string>
    <string name="settings_actiononback">Action on Back:</string>
    <string name="label_enableroot">Enable Root:</string>
    <string name="label_wordwrap">Word Wrap:</string>
</resources>