<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="0"
            app:srcCompat="@drawable/save_focused"
            android:layout_marginRight="8dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/textViewsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_savedoc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="0"
            app:srcCompat="@drawable/search_focused"
            android:layout_marginRight="8dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/textViewsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_searchtext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewtabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="0"
            app:srcCompat="@drawable/tabs_focused"
            android:layout_marginRight="8dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/textViewtabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_tabs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="0"
            app:srcCompat="@drawable/arrow_down_focused"
            android:layout_marginRight="8dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/textViewdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_textlayer2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_weight="0"
            app:srcCompat="@drawable/back"
            android:layout_marginRight="8dp"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/textViewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_editorclose" />
    </LinearLayout>

    <TextView
        android:id="@+id/opensettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:padding="3dp"
        android:text="@string/help_opensettings" />
</LinearLayout>