<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewdirparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/dir_parent_focused" />

        <TextView
            android:id="@+id/textViewdirparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_parentdir" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewdoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/doc_focused" />

        <TextView
            android:id="@+id/textViewdoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_newdoc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewdir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/dir_new_focused" />

        <TextView
            android:id="@+id/textViewdir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_newdir" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewtabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/tabs_focused" />

        <TextView
            android:id="@+id/textViewtabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_tabs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageViewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textViewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_weight="1"
            android:text="@string/help_browseclose" />
    </LinearLayout>

    <TextView
        android:id="@+id/opensettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:padding="3dp"
        android:text="@string/help_opensettings" />
</LinearLayout>